--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.0",
     "@nuxt/image": "^1.7.0",
+    "@yeger/vue-masonry-wall": "^5.0.12",
     "nuxt": "^3.12.2"
   },
   "devDependencies": {
